--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,8 @@
   padding: 1em;
   color: white;
   margin-bottom: 1em;
+  text-align: left;
+
 }
 
 .App-header-title {
@@ -10,7 +12,7 @@
 }
 
 .App-header-subtitle {
-  font-size: 1em;
+  font-size: .75em;
 }
 
 .App-header-title, .App-header-subtitle {
