--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -3,7 +3,8 @@
 
 
 .GalleryItem-description {
-  padding: 10px;
+  padding: 30px;
+  vertical-align: center;
 }
 
 .GalleryItem-image, .GalleryItem-description {
@@ -12,7 +13,15 @@
   width: 500px;
 }
 
-.GalleryItem-button {
-  width: 100%;
-  margin-bottom: 1em;
+.GalleryItem-button, .GalleryItem-likes {
+  width: 49%;
+  margin: 2px 2px 1.5em 2px;
+}
+
+.GalleryItem-button-wrapper {
+  text-align: center;
+}
+
+.GalleryItem-likes {
+  color: white;
 }
