Added custom font family for dyslexia-friendly reading.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
   background-image: url("https://i.imgur.com/t4qM9SM.png");
+  font-family: "opendyslexic", 'Times New Roman', Times, serif;
 }
 
