--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("https://i.imgur.com/t4qM9SM.png");
+  background-image: url("../../assets/background.png");
   font-family: "opendyslexic", 'Times New Roman', Times, serif;
 }
 
