--- a/src/components/GalleryList/GalleryList.css
+++ b/src/components/GalleryList/GalleryList.css
@@ -1,6 +1,8 @@
 .App-GalleryList-Header {
-  font-size: 2.5em;
+  font-size: 3em;
   margin-top: 1em;
+  color: #01579B;
+  text-shadow: 4px 0px #B3E5FC;
 }
 
 /* .App-GalleryList-Display{
