--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .Footer {
   background-color: #B3E5FC;
-  padding: .5em;
+  padding: .5em 1em .5em .5em;
   color: #01579B;
   text-align: right;
 }
