--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
   background-image: url("../../assets/background.png");
-  font-family: "opendyslexic", 'Georgia', Times, serif;
+  font-family: 'opendyslexic', 'Georgia', Times, serif;
 }
 
