Added font global functionality.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,3 +4,6 @@
   font-family: 'opendyslexic', 'Georgia', Times, serif;
 }
 
+/* @import '../../../public/fonts/OpenDyslexiaWebFontKit/opendyslexic-regular-webfont.woff'; */
+
+
