--- a/src/fonts/font.css
+++ b/src/fonts/font.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'opendyslexic';
   src: local('opendyslexic'),
-       url('../fonts/OpenDyslexiaWebFontKit/opendyslexic-regular-webfont.woff') format('woff'),
-       url('../fonts/OpenDyslexiaWebFontKit/opendyslexic-regular-webfont.woff2') format('woff');
+       url('./OpenDyslexiaWebFontKit/opendyslexic-regular-webfont.woff') format('woff'),
+       url('./OpenDyslexiaWebFontKit/opendyslexic-regular-webfont.woff2') format('woff2');
 }
 
